--- a/site/style.css
+++ b/site/style.css
@@ -1,89 +1,73 @@
-/** HEADER **/
-#header-nav {
-    background-color: grey;
-    border-radius: 0;
-    border: 0;
+.container-fluid
+{
+	margin: 0;
+	padding: 0;
+}
+.navbar
+{
+	border-radius: 0px;
+	background-color: grey;
+}
+.navbar-brand
+{
+  font-size: 35px;
+  color: black;
+  padding-left: 25px;
 }
 
-.pull-left {
-    float: left;
+.nav
+{
+	margin: 0;
+	padding: 0;
 }
-
-.navbar-brand {
-    padding-top: 40px;
-    height: 100px;
-}
-
-.navbar-brand h1 { /*Restaurant name*/
-    color: black;
-    font-size: 2em;
-    text-transform: uppercase;
-    font-weight: bold;
-    text-shadow: 1px 1px 1px #222;
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: .75;
-}
-
-.navbar-brand a:hover, .navbar-brand a:focus {
-  text-decoration: none;
-}
-
-#nav-list {
-  margin-top: 10px;
-}
-#nav-list a {
-  color: #951C49;
+.navbar-nav
+{
+  font-size: 25px;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
-#nav-list a:hover {
-  background: #E7E7E7;
+.navbar-toggle
+{
+	border: 2px solid white;
+	margin-right: 25px;
 }
-#nav-list a span {
-  font-size: 1.8em;
+.icon-bar
+{
+	background-color: white;
+}
+.main-title {
+    text-align: center;
+    padding-bottom: 40px;
+    font-weight: bold;
+}
+li
+{
+	box-sizing: border-box;
+	width: 100%;
+}
+.menu-item
+{
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	background-color: white;
+	border-bottom: 1px solid black;
+	color: black;
+	display: block;
 }
 
-#phone {
-  margin-top: 5px;
-}
-#phone a { /* Phone number */
-  text-align: right;
-  padding-bottom: 0;
-}
-#phone div { /* We Deliver */
-  color: #557c3e;
-  text-align: right;
-  padding-right: 15px;
+.row
+{
+	margin: 20px;
 }
 
-  .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-    border: 1px solid black;
-  }
-  .navbar-header button.navbar-toggle {
-    clear: both;
-    margin-top: -65px;
-  }
-  
-
-
-  .navbar-brand h1 {
-    text-align: left;
-  }
-
-  .title {
-      text-align: center;
-      padding-bottom: 40px;
-      font-weight: bold;
-  }
-
-  .container {
-      background-color: grey;
-      width: 97%;
-  }
-
-  h2 {
+h2 {
     text-align: center;
     font-weight: bold;
   }
 
-  
+  .row {
+    background-color: grey;
+    width: 97%;
+}
