--- a/site/style.css
+++ b/site/style.css
@@ -36,8 +36,7 @@
 {
 	background-color: white;
 }
-.main-title {
-    text-align: center;
+.text-center {
     padding-bottom: 40px;
     font-weight: bold;
 }
